Fix: note menu effecting gap spacings

--- a/src/components/NotesView/NotesView.scss
+++ b/src/components/NotesView/NotesView.scss
@@ -57,6 +57,7 @@
     &link {
       text-decoration: none;
       color: var(--color-text);
+      height: 10rem;
     }
 
     &top-line {
@@ -91,9 +92,14 @@
         background-color: var(--sidebar-color-bg);
         padding: 0.5rem 0;
         border-radius: 0.25rem;
-        margin-left: -9.5rem;
-        margin-top: 2.5rem;
+        // margin-left: -9.5rem;
+        // margin-top: 2.5rem;
         height: 3.75rem;
+
+        top: -7rem;
+        position: relative;
+        width: 8rem;
+        right: -6rem;
       }
 
       &btn {
